# AdaptButton

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  serialsh.c  serialsh.h  sfuncs.c  sfuncs.h
ipynb/: 3d_sim.ipynb  calc_resistor.py  serial_plot.ipynb
sch/adapt_button/: adapt_button.kicad_prl  adapt_button.kicad_pro  adapt_button.kicad_sch
